
[package]
name = "language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.49", features = ["full", "extra-traits"] } 
quote = "1.0.35" 
proc-macro2 = "1.0.78"
general_assembly = {path = "../../general_assembly"}
